cabal-version:      2.4
name:               graph-algos
version:            0.1.0.0

extra-source-files: CHANGELOG.md

library
    exposed-modules:  AdjacencyMatrix, GraphAlgos
    build-depends:    base ^>=4.14.3.0,
                      vector,
		      containers,
		      mtl
    ghc-options: -Wall -O2 -Werror=incomplete-patterns -XTemplateHaskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable graph-algos
    main-is:          Main.hs
    build-depends:
        base ^>=4.14.3.0,
        graph-algos

    ghc-options: -Wall -O2 -Werror=incomplete-patterns -XTemplateHaskell
    hs-source-dirs:   app
    default-language: Haskell2010
